--- a/index.html
+++ b/index.html
@@ -18,5 +18,51 @@
     <meta name="author" content="Matthias-Mosthof" />
     <title>Landing-Page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>All your files in one secure<br />location, accsessible anywhere.</h1>
+    </header>
+    <p>
+      Fylo stores your most important files in one secure location. Acces<br />
+      them wherever you need, share and collaborate with friends, family, and<br />
+      co-workers
+    </p>
+    <header>
+      <h1>Stay productive, wherever you are</h1>
+    </header>
+    <p>
+      Never let location be an issue when accessing your files. Fylo has you<br />
+      covered for all of your file storage needs. <br /><br />
+      Securely share files and folders with friends, family and colleagues<br />
+      for live collaboration. No email attachments required.
+    </p>
+    <header class="header3">
+      <h2>Get early access today</h2>
+    </header>
+    <p>
+      It only takes a minute to sign up and our free starter tier<br />
+      is extremely generous. If you have any questions, our support team<br />
+      would be happy to help you.
+    </p>
+    <footer class="footer">
+      <div class="flex-footer">
+        <ul>
+          <li>Phone: 1-543-1234567</li>
+          <br />
+          <li>example@fylo.com</li>
+        </ul>
+        <ul>
+          <li>About Us</li>
+          <li>Jobs</li>
+          <li>Press</li>
+          <li>Blog</li>
+        </ul>
+        <ul>
+          <li>Contact Us</li>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
