--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       them wherever you need, share and collaborate with friends, family, and<br />
       co-workers
     </p>
+    <input type="text" name=" " id="input1" class="Input">
+    <label id="input1"><button class="Button-started">Get started</button></label>
     <header>
       <h1>Stay productive, wherever you are</h1>
     </header>
