--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       Securely share files and folders with friends, family and colleagues<br />
       for live collaboration. No email attachments required.
     </p>
+    <div class="container">
+    <div class="Acces">
     <header class="header3">
       <h2>Get early access today</h2>
     </header>
@@ -55,6 +57,12 @@
       is extremely generous. If you have any questions, our support team<br />
       would be happy to help you.
     </p>
+  </div>
+  <div class="Get-started2">
+    <input id="2" type="text" class="Input2"><br>
+    <label id="2"><button class="button2">Get started for free</button></label>
+  </div>
+  </div>
     <footer class="footer">
       <div class="flex-footer">
         <ul>
