--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     </ul>
   </header>
   <body>
+    <div class="container-pic-one">
+      <div>
     <header>
       <h1>All your files in one secure<br />location, accsessible anywhere.</h1>
     </header>
@@ -38,6 +40,13 @@
     </p>
     <input type="text" name=" " id="input1" class="Input">
     <label id="input1"><button class="Button-started">Get started</button></label>
+    </div>
+    <div>
+    <section class="pic-one"></section>
+  </div>
+    </div>
+    <div class="container-pic-two">
+      <div>
     <header>
       <h1>Stay productive, wherever you are</h1>
     </header>
@@ -45,8 +54,13 @@
       Never let location be an issue when accessing your files. Fylo has you<br />
       covered for all of your file storage needs. <br /><br />
       Securely share files and folders with friends, family and colleagues<br />
-      for live collaboration. No email attachments required.
+      for live collaboration. No email attachments required.<br><br>
+     <a class="Fylo-link" href="test.de">See how Fylo works</a>
     </p>
+    </div>
+    <div class="pic-two">
+    </div>
+     </div>
     <div class="container">
     <div class="Acces">
     <header class="header3">
@@ -57,6 +71,7 @@
       is extremely generous. If you have any questions, our support team<br />
       would be happy to help you.
     </p>
+   
   </div>
   <div class="Get-started2">
     <input id="2" type="text" class="Input2"><br>
@@ -65,18 +80,17 @@
   </div>
     <footer class="footer">
       <div class="flex-footer">
-        <ul>
+        <ul class="footer-list">
           <li>Phone: 1-543-1234567</li>
-          <br />
           <li>example@fylo.com</li>
         </ul>
-        <ul>
+        <ul class="footer-list">
           <li>About Us</li>
           <li>Jobs</li>
           <li>Press</li>
           <li>Blog</li>
         </ul>
-        <ul>
+        <ul class="footer-list">
           <li>Contact Us</li>
           <li>Terms</li>
           <li>Privacy</li>
