Feat: adds-a-bunch

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <section class="pic-one"></section>
   </div>
     </div>
+    <div class="wave"></div>
     <div class="container-pic-two">
       <div>
     <header>
@@ -78,12 +79,14 @@
     <label id="2"><button class="button2">Get started for free</button></label>
   </div>
   </div>
-    <footer class="footer">
+    <footer class="footer"> 
+      <div class="container-footer">
+      <div class="logo-footer"></div>
       <div class="flex-footer">
         <ul class="footer-list">
-          <li>Phone: 1-543-1234567</li>
-          <li>example@fylo.com</li>
-        </ul>
+          <li class="phone">Phone: 1-543-1234567</li>
+          <li class="mail">example@fylo.com</li>
+       </ul>
         <ul class="footer-list">
           <li>About Us</li>
           <li>Jobs</li>
@@ -95,7 +98,13 @@
           <li>Terms</li>
           <li>Privacy</li>
         </ul>
+        <ul class="social-media">
+          <li class="social fb"></li>
+          <li class="social twitter"></li>
+          <li class="social insta"></li>
+        </ul>
       </div>
+    </div>
     </footer>
   </body>
 </html>
