Feat: adds-formatting-and-alignment

--- a/index.html
+++ b/index.html
@@ -58,10 +58,26 @@
       for live collaboration. No email attachments required.<br><br>
      <a class="Fylo-link" href="test.de">See how Fylo works</a>
     </p>
+    <div class="quote-container">
+      <div class="quote-item"></div>
+    <p>Fylo has improved our team productivity by an order of magnitude. Since
+        making the switch our team has become a well-oiled collaboration machine
+      </p>
+      <div class="founder-pic">
+        <div class="founder-text">
+        <h3>Kyle Burton</h3>
+        <p>Founder & CEO, Huddle</p>
+        </div>
+        </div>
+      </div>
+      </div>
+       <div>  
+      <section class="pic-two"></section>
+       </div>
+   
     </div>
-    <div class="pic-two">
     </div>
-     </div>
+    
     <div class="container">
     <div class="Acces">
     <header class="header3">
