Feat: Adds-input-description-and-hover-effects

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
       them wherever you need, share and collaborate with friends, family, and<br />
       co-workers
     </p>
-    <input type="text" name=" " id="input1" class="Input">
-    <label id="input1"><button class="Button-started">Get started</button></label>
+    <form class="input-wrapper">
+    <input type="text" name=" " id="input1" class="Input" placeholder=" ">
+    <label for="input1" class="description">Enter your email...</label>
+    <button class="Button-started">Get started</button>
+  </form>
+     
     </div>
     <div>
     <section class="pic-one"></section>
