Feat: Adds-Responsive-Design-and-Comments

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
       co-workers
     </p>
     <form class="input-wrapper">
-    <input type="text" name=" " id="input1" class="Input" placeholder=" ">
+    <input type="text" name=" " id="input1" class="Input" placeholder="">
     <label for="input1" class="description">Enter your email...</label>
-    <button class="Button-started">Get started</button>
+      <button class="Button-started">Get started</button>
   </form>
+      
      
     </div>
     <div>
@@ -103,7 +104,7 @@
       <div class="container-footer">
       <div class="logo-footer"></div>
       <div class="flex-footer">
-        <ul class="footer-list">
+        <ul class="footer-list1">
           <li class="phone">Phone: 1-543-1234567</li>
           <li class="mail">example@fylo.com</li>
        </ul>
