feat:Adds-Possibility-Moves-for-All-Pieces

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
    
   </div>
   <div class="Get-started2">
-    <input id="2" type="text" class="Input2"><br>
+    <input id="2" type="text" class="Input2">
     <label id="2"><button class="button2">Get started for free</button></label>
   </div>
   </div>
